# critter-world

./: LICENSE  README.md  justfile  pyproject.toml  setup.cfg
src/critter_world/: token.py
tests/: test_tokens.py
